      - Added UniformResource#requestCacheDirectives and 
        responseCacheDirectives properties.
      - Added UniformResource#doError(Status) and doError(Status, msg)
        methods to allow interception and customization of the default
        behavior (such as throwing a ResourceException on the client-side).
        Suggested by Florian Bucklers.
    - Enhancements
      - Simplified the default console logging by replacing Java's default
        verbose log formatter by a single line formatter. This formatter
        can be modified via the static Engine#logFormatter property.
      - Added easy programmatic control of log configuration via 
        Engine#logLevel and restletLogLevel static properties.
        If regular log configuration is used via system properties, it 
        is taking over for backward compatibility.
      - In addition to java.util.logging.SimpleFormatter, two new ones are
        added: org.restlet.engine.log.SimplerFormatter and the new default
        org.restlet.engine.log.SimplestFormatter.
      - Removed TraceHandler class, replaced by configurable ConsoleHander
        formatters.
      - Improved the precision of log messages, for example giving the list
        of template variables matched and their value. 
        Suggested by John Logdson.
      - Optimized routing when 0 characters are matched on an URI template.
      - Added IoUtils.TIMEOUT_MS constant to globally configure I/O related
        timeouts. Its value is 60 seconds by default, but can be configured
        via the "org.restlet.engine.io.timeoutMs" system property. 
      - Added server-side support for Amazon Web Services (S3) authentication.
        Contributed by Jean-Philippe Steinmetz.
      - Added support for DecoderService on the client-side as well.
      - Implemented the automatic filtering of outbound services, via the
        Application#outboundRoot property.
    - Bugs fixed